--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,10 @@ section {
     margin-left: -35px;
 }
 
-
+.navbar-brand img{
+    bottom: 10px;
+    max-height: 90px;
+}
 /* =========================================
                 Home
 ============================================ */
