--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1413,6 +1413,9 @@ ul.navbar-nav>li>a:focus {
     font-size: 15px;
     padding: 3px 5px;
 }
+nav{
+    position: fixed;
+}
 
 /* .display{
     margin-top: 5%;
